--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: your name
  * @Date: 2021-07-12 21:14:02
- * @LastEditTime: 2021-07-12 22:43:57
- * @LastEditors: your name
+ * @LastEditTime: 2021-07-13 14:12:49
+ * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \vue\supermall\public\index.html
 -->
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
+  <link rel="icon" href="./favicon.ico">
 </head>
 
 <body>
